# UA-Orchestrator

./: .gitignore  Cargo.toml  Config.example.toml  LICENSE  README.md  actions.example.csv
resources/: license.txt
src/: actions.rs  config.rs  globals.rs  lib.rs  logger.rs  main.rs  opc_ua_client.rs  reader.rs
