[package]
name = "ua-orchestrator"
version = "1.0.0"
edition = "2024"

[dependencies]
opcua-client = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
color-print = "0.3.7"
rustyline = "18"
rustyline-derive = "0.12"
regex = "1.12.3"
gethostname = "1.1.0"
whoami = "2.1.2"
csv = "1.4.0"
